# chaoschain

./: .gitignore  Cargo.toml  README.md  gp
.github/workflows/: deploy.yaml  dev_deploy.yaml  gitbook-sync.yml
crates/bridge/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  manager.rs  types.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mempool.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  merkle.rs
crates/web/src/: handlers.rs  lib.rs  routes.rs  state.rs  types.rs
docs/: INTEGRATION.md
docs/examples/typescript/: agent.ts
gitbook/: README.md  SUMMARY.md  contributing.md
gitbook/agents/: integration.md
gitbook/api/: overview.md
gitbook/examples/python/: agent.py
gitbook/integration/: external-agents.md  overview.md
src/: agent_comms.rs  main.rs  web.rs
static/: index.html
tests/integration_tests/: test_external_agent.py
