[package]
name = "chaoschain-consensus"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core = { path = "../core" }
chaoschain-p2p = { path = "../p2p" }
chaoschain-state = { path = "../state" }
chaoschain-crypto = { path = "../crypto" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# AI/LLM integration
async-openai = "0.18.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { workspace = true }
hex = "0.4"
serde_bytes = "0.11"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }

# Logging
tracing = "0.1"

# Random
rand = { version = "0.8", features = ["small_rng"] }

# Async traits
async-trait = { workspace = true }

# Chrono
chrono = "0.4"

# Concurrency
parking_lot = "0.12" 