[package]
name = "chaoschain-p2p"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core = { path = "../core" }
chaoschain-crypto = { path = "../crypto" }

# P2P networking
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "macros",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "async-std"
]}
libp2p-swarm-derive = "0.25"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Cryptography
sha2 = { workspace = true }
blake3 = { workspace = true } 