[package]
name = "chaoschain-state"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Contributors"]

[dependencies]
# Internal dependencies
chaoschain-core = { path = "../core" }
chaoschain-crypto = { path = "../crypto" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Cryptography
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = "0.12"

# Random number generation
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true } 